--- a/deployment.yml
+++ b/deployment.yml
@@ -2,10 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    cattle.io/creator: h.hashemi
+    cattle.io/creator: [USERNAME]
     workload.user.cattle.io/workloadselector: deployment-mysql
   name: mysql
-  namespace: ha-shams
+  namespace: [NAMESPACE]
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
@@ -24,7 +24,7 @@ spec:
         workload.user.cattle.io/workloadselector: deployment-mysql
     spec:
       containers:
-      - image: reg.fn/shams/mysql:<version>
+      - image: [ADDRESS]/mysql:<version>
         imagePullPolicy: IfNotPresent
         name: mysql
         # ports:
@@ -47,7 +47,7 @@ spec:
          # name: upload
       dnsPolicy: ClusterFirst
       imagePullSecrets:
-      - name: hashemi
+      - name: [NAMESPACE]
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
